<package format="2">
  <name>interactive_markers</name>
  <description>
     3D interactive marker communication library for RViz and similar tools.
  </description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>BSD</license>  
  <version>1.11.5</version>

  <author>David Gossow</author>
  <author email="william@openrobotics.org">William Woodall</author>

  <url>http://ros.org/wiki/interactive_markers</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
</package>
