<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interactive_markers</name>
  <description>
     3D interactive marker communication library for RViz and similar tools.
  </description>
  <maintainer email="dharini@openrobotics.org">Dharini Dutia</maintainer>
  <license>BSD</license>  
  <version>1.12.0</version>

  <author>David Gossow</author>
  <author email="william@osrfoundation.org">William Woodall</author>
  <url>http://ros.org/wiki/interactive_markers</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
