<package format="2">
  <name>interactive_markers</name>
  <description>
     3D interactive marker communication library for RViz and similar tools.
  </description>

  <maintainer email="dharini@openrobotics.org">Dharini Dutia</maintainer>

  <license>BSD</license>
  <version>2.5.4</version>

  <author>David Gossow</author>
  <author email="jacob@openrobotics.org">Jacob Perron</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author email="william@openrobotics.org">William Woodall</author>

  <url>http://ros.org/wiki/interactive_markers</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>builtin_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
